--- a/EPAM.Task01/ShapeLibrary/ShapeLibrary.csproj
+++ b/EPAM.Task01/ShapeLibrary/ShapeLibrary.csproj
@@ -6,4 +6,8 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ReaderLibrary\ReaderLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
