--- a/EPAM.Task04/src/ClientClassLibrary/ClientClassLibrary.csproj
+++ b/EPAM.Task04/src/ClientClassLibrary/ClientClassLibrary.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClientClassLibrary\ClientClassLibrary.csproj" />
+    <ProjectReference Include="..\StateClassLibrary\StateClassLibrary.csproj" />
   </ItemGroup>
 
 </Project>
